--- a/src/components/LeftDiv/LeftDiv.css
+++ b/src/components/LeftDiv/LeftDiv.css
@@ -4,13 +4,13 @@
   height: 200px;
   justify-content: center;
   margin-bottom: 2em;
-  background-color: #c36d5b;
-  color: #212020;
+  background-color: #4caf50;
+  color: #141414;
   overflow-y: auto;
   overflow-x: hidden;
 }
 
 #covidTableData {
-  color: #212020;
+  color: #141414;
   font-weight: bold;
 }
