--- a/src/components/RightDiv/RightDiv.css
+++ b/src/components/RightDiv/RightDiv.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100px;
   justify-content: center;
-  background-color: #4caf50;
+  background-color: #fcf3cf;
   margin-bottom: 2em;
   color: #212020;
   overflow-y: auto;
@@ -17,7 +17,7 @@
   margin-top: 5px;
   justify-content: center;
   margin-bottom: 2em;
-  background-color: #4caf50;
+  background-color: #fcf3cf;
   color: #141414;
   overflow-y: auto;
   overflow-x: auto;
@@ -30,7 +30,7 @@
   margin-top: 5px;
   justify-content: center;
   margin-bottom: 2em;
-  background-color: #4caf50;
+  background-color: #fcf3cf;
   color: #141414;
   overflow-y: auto;
   overflow-x: auto;
