--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,6 @@
   justify-content: center;
   padding: 1em;
   padding-bottom: 2em;
-  background-color: #4caf50;
+  background-color: #f8c471;
   color: #141414;
 }
