--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,8 +5,8 @@
   justify-content: center;
   padding: 1em;
   margin-bottom: 2em;
-  background-color: #4caf50;
-  color: #141414;
+  background-color: #fcf3cf;
+  color: #922b21;
 }
 
 .Title-Subtitle {
