--- a/src/components/LeftDiv/LeftDiv.css
+++ b/src/components/LeftDiv/LeftDiv.css
@@ -4,7 +4,7 @@
   height: 200px;
   justify-content: center;
   margin-bottom: 2em;
-  background-color: #4caf50;
+  background-color: #fcf3cf;
   color: #141414;
   overflow-y: auto;
   overflow-x: hidden;
